istio-hybrid.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: k8-self-heal
spec:
  hosts:
  - "*"
  gateways:
  - k8-self-heal-gateway
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 50
      abort:
        httpStatus: 503
        percentage:
          value: 50
    route:
    - destination:
        host: k8-self-heal.default.svc.cluster.local
        port:
          number: 3000
